--- a/src/App.css
+++ b/src/App.css
@@ -614,7 +614,7 @@ input[type="date"]
 }
 
 .nav_logo img { 
-  width: 2.5rem;
+  width: 2rem;
 }
 
 .search_ico { 
@@ -846,6 +846,12 @@ input[type="date"]
   max-width: 350px;
   overflow-x: hidden;
   overflow-y: auto;
+  padding:5px;
+  background: var(--toolbg);
+}
+
+.home_first_part::-webkit-scrollbar{ 
+  display: none;
 }
 
 
@@ -862,13 +868,520 @@ input[type="date"]
   max-width: 350px;
   overflow-y: auto;
   overflow-x: hidden;
+  background: var(--toolbg);
 }
 
+.home_middle_part::-webkit-scrollbar{ 
+  display: none;
+}
+
+.home_last_part::-webkit-scrollbar{ 
+  display: none;
+}
+
+.ourname_usr { 
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.folo_line { 
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  gap:20px;
+  width: 100%;
+  padding:10px;
+}
+
+.sol_one { 
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap:10px;
+  background: var(--toolbg);
+  width: 100%;
+  position: relative;
+  padding: 10px;
+  border: 2px solid var(--border);
+}
+
+.sol_one img { 
+  width: 4rem;
+  border-radius: 5px;
+  transition: .3s ease-in-out;
+  pointer-events: none;
+  object-fit: cover;
+  object-position: 0 0;
+}
+
+.sol_one:hover img { 
+  transform: scale(1.5);
+}
+
+.folo_line a { 
+  text-decoration: none;
+  width: 100%;
+  color: var(--maincl);
+}
+
+.sol_two { 
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap:10px;
+  background: var(--tol_m);
+  width: 100%;
+  position: relative;
+  padding: 10px;
+  position: relative;
+  overflow: hidden;
+}
+
+.sol_two::before{ 
+  content: '';
+  position: absolute;
+  top:0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: var(--tol_m);
+  animation: ani 1s ease-in-out alternate infinite;
+}
+
+@keyframes ani {
+  0% { 
+    left: 100%;
+  }
+}
+
+.round_ers { 
+  height: 3rem;
+  width: 3rem;
+  background: var(--toolbg);
+  border-radius: 5px;
+}
+
+.name_of_me { 
+  width: 70%;
+  background: var(--toolbg);
+  height: 15px;
+}
+
+
+.user_part_w { 
+  flex-direction: column;
+  height: 200px;
+  width: 100%;
+  background-image: url("https://expertphotography.b-cdn.net/wp-content/uploads/2020/08/social-media-profile-photos.jpg");
+  background-position: 0 0;
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding-top: 100px;
+  text-align: center;
+  margin-bottom: 200px;
+}
+
+.user_part_w img { 
+  width: 10rem;
+  height: 10rem;
+  border-radius: 50%;
+  border: 2px solid var(--border);
+  position: inherit;
+  pointer-events: none;
+  object-fit: cover;
+  object-position: 0 0;
+  z-index: 4000;
+}
+
+* > a { 
+  color: var(--maincl);
+  text-decoration: none;
+}
+
+* > a:hover{ 
+  color: var(--maincl);
+  text-decoration: none;
+}
+
+.vid_tie { 
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 100%;
+  max-width: 220px;
+}
+.name_of { 
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 100%;
+  max-width: 220px;
+}
+.own_vid_n { 
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 100%;
+  max-width: 220px;
+}
+
+.watch_con { 
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  gap:10px;
+  flex-direction: column;
+}
+
+.watch_con a { 
+  width: 100%;
+}
+
+.stories::-webkit-scrollbar{ 
+  display: none;
+}
+
+.stories { 
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap:10px;
+  padding-top: 40px;
+  padding:20px;
+  overflow-x: auto;
+  overflow-y: hidden;
+  scroll-snap-type: x mandatory;
+}
+
+.stories img { 
+  width: 100%;
+  object-fit: cover;
+  object-position: 0 0 ;
+height: 100%;
+border-radius: 5px;
+}
+
+.sgory_main { 
+  width: 200px;
+  position: relative;
+  height: 200px;
+  border-radius: 5px;
+  border: 2px solid var(--border);
+  overflow: hidden;
+  scroll-snap-align: center;
+}
+
+#scme { 
+  transition: .3s ease-in-out;
+  pointer-events: none;
+}
+
+.sgory_main:hover #scme{ 
+  opacity: 0.9;
+  transform: scale(1.2);
+}
+
+.us_own { 
+  position: absolute;
+  top:10px;
+  left: 10px;
+}
+
+.us_own img { 
+  width: 3rem;
+  height: 3rem;
+  border: 2px solid var(--border);
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: 0 0 ;
+  pointer-events: none;
+}
+
+.ac_user { 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sho_ppv { 
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap:10px;
+  width: 100%;
+  max-width: 600px;
+  background: var(--toolbg);
+  padding:10px;
+  border-radius: 5px;
+  border: 2px solid var(--border);
+}
+
+.sho_ppv img { 
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  border:2px solid var(--border);
+  object-fit: cover;
+  object-position: 0 0;
+  pointer-events: none;
+}
+
+.top_ask { 
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap:10px;
+}
+
+.buts { 
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap:10px;
+  width: 100%;
+}
+
+.buts button{ 
+  width: 100%;
+}
+
+
+.shqt_new { 
+  padding:10px;
+  width: 100%;
+  border-radius: 60px;
+  background: var(--tol_m);
+}
+
+.popo img { 
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  border: 2px solid var(--border);
+  object-fit: cover;
+  object-position: 0 0;
+}
+
+.popo { 
+  display: flex;
+  justify-content: space-between;
+  gap:10px;
+  align-items: center;
+  border-bottom: 1px solid var(--border);
+  padding:5px;
+}
+
+.post_mains { 
+  background: var(--toolbg);
+  border: 2px solid var(--border);
+  overflow: hidden;
+  border-radius: 10px;
+}
+
+.post_main { 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap:10px;
+}
+
+.times { 
+  font-size: 13px;
+}
+
+.nam { 
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 100%;
+  max-width: 200px;
+}
+
+.nam:hover{ 
+  text-decoration: underline;
+}
+
+.options { 
+  position: relative;
+  padding:10px;
+}
+
+.options i { 
+  font-size: 20px;
+}
+
+.options .down { 
+  position: absolute;
+  top:40px;
+  right: 0;
+  width: 280px;
+  background: var(--toolbg);
+  padding:10px;
+  border-radius: 5px;
+  border: 2px solid var(--border);
+  display: none;
+}
+
+.posteD_containers { 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  flex-direction: column;
+  gap:10px;
+}
+
+.post_mains { 
+  width: 100%;
+  max-width: 600px;
+}
+
+.posted_image img { 
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+  object-position:center;
+  pointer-events: none;
+}
+
+.posted_image video { 
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+  object-position: 0 0 ;
+}
+
+.d_1 { 
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap:10px;
+  padding:5px;
+  width: 100%;
+  cursor: pointer;
+  margin-top: 5px;
+  border-radius: 5px;
+}
+
+.to_1 small{ 
+  font-size: 12px;
+}
+
+.d_1:hover { 
+  background: var(--tol_m);
+}
+
+#likes{ 
+  font-variation-settings: 'FILL' 1, 'wght' 400, "GRAD" 0, 'opsz' 48;
+  color: #0077ff;
+}
+
+.actions_pages { 
+  display: flex;
+  justify-content: space-between;
+  gap:10px;
+  align-items: center;
+  border-top: 1px solid var(--border);
+}
+
+.btn_one { 
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding:10px;
+  cursor: pointer;
+  gap:10px;
+}
+
+.btn_one:hover{ 
+  background: var(--tol_m);
+}
+
+.btn_two { 
+  padding:10px;
+}
+
+.fa-ellipsis { 
+  cursor: pointer;
+}
+
+.posted_image { 
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  gap:5px;
+}
+
+.posted_image a { 
+  width: 100%;
+}
+
+.friend_container { 
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  gap:10px;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 150px;
+  padding-top: 20px;
+  padding-left:40px;
+  padding-right:40px;
+}
+
+.friend_container img { 
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  object-position: 0 0 ;
+  pointer-events: none;
+}
+
+.friend_cards { 
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap:10px;
+  background: var(--toolbg);
+  padding:10px;
+  width: 100%;
+  border: 2px solid var(--border);
+  border-radius: 5px;
+}
+
+
+/* Preloader */
+
+.loaders { 
+  position: fixed;
+  top:0;
+  left: 0;
+  width: 100%;
+  z-index: 500000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  background: var(--mainbg);
+  text-align: center;
+}
+
+/* End */
 
 @media print { 
   body { 
     display: none;
   }
+}
+
+@media screen and (max-width: 1175px) {
+ .home_last_part { 
+  display: none;
+ }
 }
 
 @media screen and (max-width: 1000px) {
@@ -940,9 +1453,32 @@ input[type="date"]
   .nav_tols { 
     max-width: 200px;
   }
+
+  .posteD_containers { 
+    padding: 0;
+    padding-bottom: 150px;
+  }
+
+  .post_mains { 
+    border-radius: 0px;
+  }
+
+
 }
 
 @media screen and (max-width: 600px){ 
+
+  .friend_container { 
+    padding-bottom: 150px;
+    padding-top: 20px;
+    padding-left:10px;
+    padding-right:10px;
+  }
+
+  .posted_image { 
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  }
+
   .sign_form { 
     width: 100%;
     max-width: 100%;
